# todo-list-app-microservices

./: .gitignore  .gitmodules  LICENSE  README.md
docs/diagrams/: generate.sh
docs/diagrams/src/: create_todo_sequence.txt  delete_todo_sequence.txt  deployment_diagram.txt  get_todo_sequence.txt  list_todo_sequence.txt  login_user_sequence.txt  register_user_sequence.txt  sequence_participants.txt  update_todo_sequence.txt
gateway/: CMakeLists.txt  Dockerfile  run.sh
gateway/inc/gateway/: applicationstarter.hpp  config.hpp  exceptionbase.hpp  gatewayapp.hpp  gatewayauthmetadataprocessor.hpp  todoclient.hpp  todoserviceimpl.hpp  userclient.hpp  userserviceimpl.hpp
gateway/src/: config.cpp  gatewayapp.cpp  gatewayauthmetadataprocessor.cpp  main.cpp
protos/: Dockerfile  buildAll.sh  run.sh
protos/todo/: todo.proto
protos/user/: user.proto
test/: Dockerfile  docker-compose.yml  e2e_base.py  gateway-variables.env  requirements.txt  run.sh  settings.py  test_todo.py  test_user.py
test/certs/: jwtRS256.key.pub  server.crt  server.key
todo/: Dockerfile  requirements.txt
todo/tests/integration/: docker-compose.yml  requirements.txt  run.sh  test.py  todo-variables.env
todo/tests/integration/certs/: jwtRS256.key
todo/todo/: app.py  main.py  models.py  session.py  settings.py  todo_servicer.py
user/: Dockerfile
user/tests/integration/: docker-compose.yml  requirements.txt  test.py  user-variables.env
user/user/: app.py  models.py  settings.py  user_servicer.py
